--- a/src/App.css
+++ b/src/App.css
@@ -255,10 +255,10 @@ scroll-behavior: smooth;
     align-items: center;
     justify-content: space-around;
     width: 60px;
-    height: 50px;
-    background-color: #252525;
+    height: 60px;
     border-radius: 50px;
-    background-image: url('imgs/logo/darck.svg');
+    background-color: #25252500;
+    background-image: url('imgs/logo/moon-phase-icon-png-removebg-preview.png');
     transition: 4s;
     background-position: center;
     background-size: auto;
@@ -270,14 +270,13 @@ scroll-behavior: smooth;
     text-align: center;
     display: flex;
     align-items: center;
-    color: rgb(0, 0, 0);
     font-weight: bolder;
     justify-content: space-around;
     width: 60px;
     border-radius: 50px;
-    height: 50px;
+    height: 60px;
     transition: 4s;
-    background-image: url('imgs/logo/ligth.jpg');
+    background-image: url('imgs/logo/sun-ligth-removebg-preview.png');
     background-position: center;
     background-size: auto;
   }
