--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,8 @@ footer {
   width: 350px;
 }
 .nome {
-  color:rgb(54, 206, 206); ;
+  color:rgb(54, 206, 206);
+  text-shadow: 0 0 2px black;
 }
 
 .darck{
@@ -229,12 +230,15 @@ scroll-behavior: smooth;
 @keyframes titulo-header {
   100%{
     color:rgb(54, 206, 206);
+    text-shadow: 0 0 2px black;
   }
   50%{
     color: white;
+    text-shadow: 0 0 2px black;
   }
   0%{
-    color: rgb(54, 206, 206);;
+    color: rgb(54, 206, 206);
+    text-shadow: 0 0 2px black;
   }
 }
 
@@ -248,6 +252,9 @@ scroll-behavior: smooth;
      top: 0;
      left: 0;
      width: 100vw;
+  }
+  .nome{
+    text-shadow: 0 0 2px black;
   }
   .modo{
     display: none;
