--- a/src/App.css
+++ b/src/App.css
@@ -161,8 +161,8 @@ footer {
   justify-content: flex-start;
   font-size: 32px;
   position: fixed;
-  left: 83%;
-  top: 150px;
+  left: 80vw;
+  top: 5vh;
   height: 35px;
   width: 100%;
 }
@@ -242,6 +242,24 @@ scroll-behavior: smooth;
   }
 }
 
+@media screen and (max-width: 1400px) {
+  #input{
+    font-size: 28px;
+    left: 3vw;
+    top: 3vh;
+    height: 6vh;
+    width: 100%;
+  }
+  .check{
+    width: 200px;
+    height: 50px;
+  }
+  .nocheck{
+    width: 200px;
+    height: 50px;
+  }
+
+}
 
 
 @media screen and (max-width: 767px){
