--- a/src/App.css
+++ b/src/App.css
@@ -278,7 +278,7 @@ scroll-behavior: smooth;
   }
   #input{
     position: fixed;
-    left: 0%;
+    left: 3%;
     top: 70px;
     height: 30px;
     width: 100%;
@@ -420,3 +420,44 @@ scroll-behavior: smooth;
   0% { opacity: 0; }
   100% { opacity: 1; }
   }
+
+  
+@media screen and (max-width: 1024px){
+  .modo{
+    display: none;
+  }
+  #input{
+    position: fixed;
+    left: 3%;
+    top: 110px;
+    height: 30px;
+    width: 100%;
+  }
+  .nocheck{
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 60px;
+    height: 60px;
+    border-radius: 50px;
+    background-color: #25252500;
+    background-image: url('imgs/logo/moon-phase-icon-png-removebg-preview.png');
+    transition: 4s;
+  }
+  .inputs{
+    display: none;
+  }
+  .check{
+    text-align: center;
+    display: flex;
+    align-items: center;
+    font-weight: bolder;
+    justify-content: space-around;
+    width: 60px;
+    border-radius: 50px;
+    height: 60px;
+    transition: 4s;
+    background-image: url('imgs/logo/sun-ligth-removebg-preview.png');
+  }
+}
