--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,20 @@ animation-iteration-count: infinite;
   align-items: center;
 }
 
+.lista{
+  display: flex;
+  gap: 15px;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.lista li{
+  display: flex;
+  gap: 15px;
+  justify-content: space-around;
+  align-items: center;
+}
+
 a{
   text-decoration: none;
 }
@@ -111,6 +125,9 @@ footer {
 .nome {
   color:rgb(54, 206, 206);
   text-shadow: 0 0 2px black;
+  animation-duration: 4s;
+animation-name: titulo-header;
+animation-iteration-count: infinite;
 }
 
 .darck{
@@ -137,6 +154,7 @@ footer {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  cursor: pointer;
 }
 .inputs{
   display: none;
@@ -155,6 +173,7 @@ footer {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  cursor: pointer;
 }
 
 #input{
@@ -166,9 +185,26 @@ footer {
   left: 80vw;
   top: 3vh;
   height: 10px;
-  width: 100%;
 }
 
+.checkbtn{
+  font-size: 30px;
+  color: white;
+  float: right;
+  line-height: 80px;
+  margin-right: 40px;
+  cursor: pointer;
+  width: 30px;
+  display: none;
+}
+
+#check1{
+  display: none;
+}
+
+.fas{
+  width: 30px;
+}
 
 .foto_portifolio {
   width: 300px;
@@ -228,6 +264,9 @@ scroll-behavior: smooth;
 animation: fadeIn 3s ease-in-out;
 scroll-behavior: smooth;
 }
+.titulo{
+  display: none;
+}
 
 @keyframes titulo-header {
   100%{
@@ -249,7 +288,6 @@ scroll-behavior: smooth;
     font-size: 28px;
     left: 83vw;
     top: 5vh;
-    width: 100%;
   }
   .check{
     width: 200px;
@@ -267,6 +305,73 @@ scroll-behavior: smooth;
 
 
 @media screen and (max-width: 767px){
+  .checkbtn{
+    margin: 0;
+    display: block;
+  }
+  .linkedin{
+    display: flex;
+    border: 2px blue solid;
+    border-radius: 10px;
+    padding: 15px;
+  }
+  .github{
+    align-items: center;
+    display: flex;
+    border: 2px rgb(109, 11, 109) solid;
+    border-radius: 10px;
+    padding: 15px;
+  }
+  .titulo{
+    display: block;
+    font-size: 30px;
+    position: fixed;
+    text-align: center;
+  }
+
+  .lista{
+    text-align: center;
+    position: fixed;
+    width: 100%;
+    height: 30vh;
+    top: 100px;
+    left: -100%;
+    translate: all .5s;
+  }
+  .lista1{
+    text-align: center;
+    background-color: rgba(48, 47, 47, 0.644);
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    margin-top: 50px;
+    left: 0;
+    translate: all .5s;
+  }
+  .fas{
+    top: 30px;
+    position: fixed;
+    width: 50px;
+  }
+  .nav-header ,.lista, .linksli {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  .nav-header ,.lista, .linksli, .linksA {
+   font-size: 20px;
+  }
+
+  .linksA:active, .linksA:hover{
+    background-color: rgba(255, 255, 255, 0.301);
+    color: rgb(54, 206, 206);
+    width: 100%;
+    border-radius: 15px;
+  }
+  #check1:checked ~ .lista {
+    left: 0;
+  }
+
   header {
     background-color: rgb(48, 47, 47);
     justify-content: space-around;
@@ -282,11 +387,11 @@ scroll-behavior: smooth;
     display: none;
   }
   #input{
+    display: block;
+    margin-left: 65vw;
+    top: 25px !important; 
     position: fixed;
-    left: 3%;
-    top: 70px;
     height: 30px;
-    width: 100%;
   }
   .nocheck{
     text-align: center;
@@ -315,13 +420,18 @@ scroll-behavior: smooth;
     transition: 4s;
     background-image: url('imgs/logo/sun-ligth-removebg-preview.png');
   }
+  #titulo-home{
+    font-size: 20px;
+  }
+  #historia{
+    font-size: 20px;
+  }
   
   .nav-header{
     width: 50vw;
   }
   .titulo-header{
-    font-size: 12px;
-    width: 15px;
+    font-size: 26px;
   }
   .container-gerall{
     display: flex;
@@ -343,6 +453,12 @@ scroll-behavior: smooth;
   .texto-sec{
     text-align: center;
     height: 75vh;
+    width: 50%;
+  }
+
+  .text{
+    text-align: center;
+    height: 75vh;
     width: 100%;
   }
   .container-geral{
@@ -355,6 +471,7 @@ scroll-behavior: smooth;
     font-size: 10px;
   }
   .img-Avatar{
+    margin-right: 10px;
     width: 30vw;
   }
   .pessoal{
@@ -369,10 +486,10 @@ scroll-behavior: smooth;
   .but{
     font-size: 10px;
     height: 15px;
-    width: 80px;
+    width: 90px;
   }
   .img-but{
-    width: 15px;
+    width: 25px;
   }
   #portifolio{
     display: flex;
@@ -382,7 +499,12 @@ scroll-behavior: smooth;
   }
 
   .foto_portifolio{
-    width: 50vw;
+    margin-left: -45%;
+    width: 95vw;
+    border-radius: 15px;
+  }
+  #titulo-Projetos{
+    font-size: 24px;
   }
   .projetos{
     width: 100vw;
@@ -403,12 +525,13 @@ scroll-behavior: smooth;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 10px;
+    font-size: 18px;
   }
   section > a{
     width: 50%;
   }
   #paragrafo{
+    font-size: 20px;
     width: 50vw;
   }
 }
@@ -432,6 +555,7 @@ scroll-behavior: smooth;
 
   
 @media screen and (max-width: 1024px){
+  
   .modo{
     display: none;
   }
@@ -440,7 +564,6 @@ scroll-behavior: smooth;
     left: 3%;
     top: 110px;
     height: 30px;
-    width: 100%;
   }
   .nocheck{
     text-align: center;
