--- a/src/App.css
+++ b/src/App.css
@@ -342,9 +342,9 @@ scroll-behavior: smooth;
     position: fixed;
     width: 100%;
     height: 30vh;
-    top: 100px;
+    top: 50px;
     left: -100%;
-    translate: all .5s;
+    transition: all .5s;
   }
   .lista1{
     display: block;
@@ -355,7 +355,7 @@ scroll-behavior: smooth;
     height: 100vh;
     margin-top: 50px;
     left: 0;
-    translate: all .5s;
+    transition: all .5s;
   }
   .fas{
     top: 30px;
